<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/baseline_album_24"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/outline_groups_24"
        android:title="@string/title_artist" />
</menu>